3512.	[port]		Check whether to use -ljson or -ljson-c. [RT #34115]

3611.	[bug]		Improved resistance to a theoretical authentication
			attack based on differential timing.  [RT #33939]

3610.	[cleanup]	win32: Some executables had been omitted from the
			installer. [RT #34116]

3609.	[bug]		Corrected a possible deadlock in applications using
			the export version of the isc_app API. [RT #33967]

3608.	[port]		win32: added todos.pl script to ensure all text files
			the win32 build depends on are converted to DOS
			newline format. [RT #22067]

3607.	[bug]		dnssec-keygen had broken 'Invalid keyfile' error
			message. [RT #34045]

3606.	[func]		"rndc flushtree" now flushes matching
			records in the address database and bad cache
                        as well as the DNS cache. (Previously only the
                        DNS cache was flushed.) [RT #33970]

3605.	[port]		win32: Addressed several compatibility issues
			with newer versions of Visual Studio. [RT #33916]

3604.	[bug]		Fixed a compile-time error when building with
			JSON but not XML. [RT #33959]

3603.	[bug]		Install <isc/stat.h>. [RT #33956]

3602.	[contrib]	Added DLZ Perl module, allowing Perl scripts to
			integrate with named and serve DNS data.
			(Contributed by John Eaglesham of Yahoo.)

3601.	[bug]		Added to PKCS#11 openssl patches a value len
			attribute in DH derive key. [RT #33928]

3600.	[cleanup]	dig: Fixed a typo in the warning output when receiving
			an oversized response. [RT #33910]

3599.	[tuning]	Check for pointer equivalence in name comparisons.
			[RT #18125]

3598.	[cleanup]	Improved portability of map file code. [RT #33820]

3597.	[bug]		Ensure automatic-resigning heaps are reconstructed
			when loading zones in map format. [RT #33381]

3596.	[port]		Updated win32 build documentation, added
                        dnssec-verify. [RT #22067]

3595.	[port]		win32: Fix build problems introduced by change #3550.
			[RT #33807]
