@@ -18,7 +18,9 @@
 
 // NS2
 
-controls { /* empty */ };
+include "../../common/rndc.key";
+
+controls { inet 10.53.0.2 port 9953 allow { any; } keys { rndc_key; }; };
 
 options {
 	query-source address 10.53.0.2;
@@ -31,6 +33,7 @@ options {
 	recursion no;
 	notify yes;
 	notify-delay 0;
+	allow-new-zones yes;
 };
 
 zone "bits" {
