@@ -34,6 +34,7 @@ options {
 	notify yes;
 	try-tcp-refresh no;
 	notify-delay 0;
+	allow-new-zones yes;
 };
 
 zone "bits" {
